# DSL-tests

./: .gitignore  DSL-tests.cabal  Example.lhs  Notes.md  README.md  Test1.hs  stack.yaml
runtime/: dslp_runtime.py
src/: C.hs  DSLD.hs  DSLDTest.hs  NameMonad.hs  Test1.hs  Test4.hs  TestC.hs
