name:           DSL-tests
version:        0.1.0.0
-- synopsis:
-- description:
homepage:       https://github.com/githubuser/DSL-tests#readme
license:        BSD3
license-file:   LICENSE
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5,
      mtl        >=2.2,
      QHaskell,
      language-c-quote >= 0.8,
      mainland-pretty  >= 0.2.5        

  exposed-modules:
      Test1
  default-language: Haskell2010 